--- a/mod-2-solution/index.html
+++ b/mod-2-solution/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Module 2 Coding Assignment</title>
+		<title>Module 2 </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">		
